# BIDK

./: .gitignore  Makefile.am  README.en.md  README.md  dbm.c  dbm.h  mambo.tar  signals.c  syscalls.c  traces.c  util.S
api/: emit_a64.c  emit_a64.h  hash_table.c  helpers.c  helpers.h  internal.c  load_store.c  plugin_support.h
arch/aarch64/: dispatcher_aarch64_asm.S  scanner_a64.c
elf/: elf_loader.c  symbol_parser.c
pie/: Makefile  Makefile.am  makefile.old  pie-a64-decoder.h  pie-a64-encoder.c  pie-a64-encoder.h  pie-a64-field-decoder.c  pie-a64-field-decoder.h
